--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
   <h1>Test</h1>
   <pre id='infoText' class='monospace'> default text </pre>
-  <button id='switchMenuButton'">기술 메뉴로 이동하기</button>
-  <button id='startBattleButton'">배틀 시작</button>
+  <div id='lowerText' class='monospace'></div>
+  <button id='button1'">기술 메뉴로 이동하기</button>
+  <button id='button2'">배틀 시작</button>
+  <div id='button3'"></div>
+  <div id='button4'"></div>
 </body>
 
 </html>
