end of work at Jul 5th, changed existing structures to flexible(div)

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
   <h1>Test</h1>
-  <pre id='infoText' class='monospace'> default text </pre>
+  <pre id='upperText' class='monospace'> default text </pre>
   <div id='lowerText' class='monospace'></div>
-  <button id='button1'">기술 메뉴로 이동하기</button>
-  <button id='button2'">배틀 시작</button>
+  <div id='button1'"></div>
+  <div id='button2'"></div>
   <div id='button3'"></div>
   <div id='button4'"></div>
 </body>
